# document-intelligence-refinery

./: .gitignore  DOMAIN_NOTES.md  README.md  pyproject.toml  requirements.txt
scripts/: ingest_document.py  run_chunking.py  run_extraction.py  run_indexing.py  run_query.py  run_triage.py  search_documents.py
src/agents/: chunker.py  extractor.py  indexer.py  query_agent.py  triage.py
src/models/: document_profile.py  extracted_document.py  ldu.py  pageindex.py  provenance.py
src/strategies/: base_strategy.py  fast_text.py  layout_aware.py  vision.py
src/utils/: budget_guard.py  confidence.py  fact_extractor.py  hashing.py  pdf_utils.py  vector_store.py
tests/: test_chunking.py  test_models.py  test_pageindex.py  test_triage.py
