[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "Enterprise document extraction pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.0.20",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.0",
    "google-generativeai>=0.3.0",
    "pytest>=7.4.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0"
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"